discussion/kv_engine/177742/177742_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

toy: expose sstable writer

Change-Id: Id698b34c80e96a34938be3c745a73840581bf863

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Rohan Suri
Date: 2022-07-19 13:43:14.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-19 13:47:10.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47917/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47917/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40260/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40260/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20235/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20235/ )

Compile error at [2022-07-19T13:46:57.423Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SstableWriterBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20235/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29384/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29384/ )

Compile error at [2022-07-19T13:46:10.795Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SstableWriterBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29384/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19085/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28: error: no member named "SstableWriterBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"? [clang-diagnostic-error]
    configuration.magmaCfg.SstableWriterBufferSize = configuration.getMagmaSstableWriterBufferSize();
                           ^~~~~~~~~~~~~~~~~~~~~~~
                           SSTableWriterBufferSize
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/magma/include/libmagma/magma.h:944:12: note: "SSTableWriterBufferSize" declared here
    size_t SSTableWriterBufferSize{1024 * 512};
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19085/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SstableWriterBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19085/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8771/ : FAILURE

Compile error at [2022-07-19T13:44:14.637Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SstableWriterBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8771/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22047/ : FAILURE

Compile error at [2022-07-19T13:44:37.935Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: no member named "SstableWriterBufferSize" in "magma::Magma::Config"; did you mean "SSTableWriterBufferSize"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22047/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20990/ : FAILURE

Compile error at [2022-07-19T13:44:57.013Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master_2/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:13:
error: ?ScopeTimer? was not declared in this scope; did you mean ?ScopeTimer2??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20990/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21348/ : FAILURE

Compile error at [2022-07-19T13:45:43.249Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:567:28:
error: ?struct magma::Magma::Config? has no member named ?SstableWriterBufferSize?; did you mean ?SSTableWriterBufferSize??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21348/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8867/ : FAILURE

Compile error at [2022-07-19T13:45:46.047Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/benchmarks/tracing_bench.cc:48:13:
error: ?ScopeTimer? was not declared in this scope; did you mean ?ScopeTimer2??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8867/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18247/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
